feat: modified search history